--- a/static/deepCoverageArcGIS.html
+++ b/static/deepCoverageArcGIS.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>热力图</title>
+    <title>居民区/医院边界图</title>
     <link rel="stylesheet" href="css/tundra.css">
     <link rel="stylesheet" href="css/esri.css">
     <style>
